--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Ulife">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,6 +38,9 @@
                 android:value="android.startup" />
             <meta-data
                 android:name="com.androidx.ulife.init.UtilsSdkInitializer"
+                android:value="android.startup" />
+            <meta-data
+                android:name="com.androidx.ulife.init.SimInitializer"
                 android:value="android.startup" />
             <meta-data
                 android:name="com.androidx.ulife.init.RoomSdkInitializer"
